Wed Nov  2 21:04:18 1994  Theodore Y. Ts'o  (tytso@dcl)

	* pre.in: Don't actually add the $(CPPOPTS) flags to CPPFLAGS;
		CPPFLAGS has them defined already.  In fact, don't define
		the CPPOPTS makefile variable at all; we don't need it.

	* pre.in: Add support for a new --with-cppopts" value where you
		can put -DXXXXX such that they are found by autoconf tests
		that use run the preprocessor over header files.

Tue Nov  1 14:11:57 1994    (tytso@rsx-11)

	* post.in (clean): Also clean up config.log, pre.out, post.out and
		Makefile.out 

Thu Oct  6 19:41:52 1994  Theodore Y. Ts'o  (tytso@dcl)

	* post.in: add default "check" rule for Makefiles that don't do
		anything else.

	* pre.in: add default all:: rule at the end of pre.in

Thu Aug  4 03:52:23 1994  Tom Yu  (tlyu@dragons-lair)

	* pre.in: strip installed programs by default

Sun Jul  3 04:41:54 1994  Tom Yu  (tlyu at dragons-lair)

	* post.in: whoops, now making sure errors don't get returned if
	something is empty

	* post.in: fixing missing semicolon in make rules
	* pre.in: MV=mv -f

Sat Jul  2 00:03:24 1994  Tom Yu  (tlyu at dragons-lair)

	* pre.in: added KRB4 to the template to keep things like v4server
	from losing
